style.css
body {
    display: flex;
    flex-direction: column;
    background-color: rgb(31, 41, 55);
   
}



.header {
    display: flex;
    justify-content: space-between;
    background-color: rgb(31, 41, 55);
    font-size: 24px;
    color: #f9faf8;
    margin: 20px 180px;
    justify-content: space-between;
    flex: 1;
    /* padding: 15px 45px; */
}

ul {
    display: flex;
    align-items: center;
    gap: 20px;
    margin: 0px;
    list-style-type: none;
}

.advertisement {
    display: flex;
    background-color: rgb(31, 41, 55);
    font-size: 48px;
    color: #f9faf8;
    flex-wrap: wrap;
    /* padding-top: 80px; */
    flex-direction: column;
    color: rgb(249, 250, 248);
    flex: 1;
}

.content{
    display: flex;
    justify-content:space-evenly;
    

}

h2{
    text-align: center;
    margin-top: 0;
}

p{
    
    font-size: 24px;
}

button{
    background-color: #3882F6;
    width: 80px;
    color: white;
    margin-bottom: 80px;
}

/*I think the padding may be affecting the spacing*/
.boxes{
    display: flex;
    flex-direction: column;
    /* justify-content: center; */
    /* align-items: flex-start; */
    background-color: white;
    padding: 20px;
    flex: 1;
}

.top{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.row{
    display: flex;
    justify-content: center;
    justify-content: space-evenly;
}

.caption{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.row img{
    width: 300px;
    height: 300px;
}

img{
    object-fit: cover;
    margin-bottom: auto;
}


.row p{
    font-size: 16px;
    margin-top: 0;
    
}

/* h2 .boxes {
    display: flex;
    align-items: flex-start;
} */

